# docker-practice

./: Dockerfile  README.md  main.py  pyproject.toml
public/: styles.css
