[tool.poetry]
name = "docker-02-04"
version = "0.1.0"
description = ""
authors = ["KwonDoHyung <dohk325@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
